nginx/nginx/1.21.6/nginx-1.21.6/nginx-build.log
src/stream/ngx_stream_proxy_module.c: In function ‘dumpHex’:
src/stream/ngx_stream_proxy_module.c:1597:16: error: comparison of integer expressions of different signedness: ‘size_t’ {aka ‘long unsigned int’} and ‘int’ [-Werror=sign-compare]
 1597 |  for (l = 0; l < ls; l++)
      |                ^
src/stream/ngx_stream_proxy_module.c:1615:23: error: pointer of type ‘void *’ used in arithmetic [-Werror=pointer-arith]
 1615 |     strncpy(str, data + (l * 16), 16);
      |                       ^
In file included from src/core/ngx_core.h:60,
                 from src/stream/ngx_stream_proxy_module.c:9:
src/stream/ngx_stream_proxy_module.c:1636:46: error: ‘s’ undeclared (first use in this function)
 1636 |         ngx_log_debug1(NGX_LOG_DEBUG_STREAM, s->connection->log, 0,
      |                                              ^
src/core/ngx_log.h:92:10: note: in definition of macro ‘ngx_log_debug’
   92 |     if ((log)->log_level & level)                                             \
      |          ^~~
src/stream/ngx_stream_proxy_module.c:1636:9: note: in expansion of macro ‘ngx_log_debug1’
 1636 |         ngx_log_debug1(NGX_LOG_DEBUG_STREAM, s->connection->log, 0,
      |         ^~~~~~~~~~~~~~
src/stream/ngx_stream_proxy_module.c:1636:46: note: each undeclared identifier is reported only once for each function it appears in
 1636 |         ngx_log_debug1(NGX_LOG_DEBUG_STREAM, s->connection->log, 0,
      |                                              ^
src/core/ngx_log.h:92:10: note: in definition of macro ‘ngx_log_debug’
   92 |     if ((log)->log_level & level)                                             \
      |          ^~~
src/stream/ngx_stream_proxy_module.c:1636:9: note: in expansion of macro ‘ngx_log_debug1’
 1636 |         ngx_log_debug1(NGX_LOG_DEBUG_STREAM, s->connection->log, 0,
      |         ^~~~~~~~~~~~~~
src/stream/ngx_stream_proxy_module.c:1669:23: error: pointer of type ‘void *’ used in arithmetic [-Werror=pointer-arith]
 1669 |     strncpy(str, data + (l * 16), size % 16);
      |                       ^
cc1: all warnings being treated as errors
make[1]: *** [objs/Makefile:1297: objs/src/stream/ngx_stream_proxy_module.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:10: build] Error 2
